# PreflopAdvisor

./: README.org  config.ini  pyproject.toml  standalone.py
preflop_advisor/: __main__.py  card_selector.py  config.ini  frequency_reader_helper.py  gui.py  hand_convert_helper.py  output_objects.py  outputframe.py  position_selector.py  randomizer.py  tooltip.py  tree_reader.py  tree_reader_helpers.py  tree_selector.py
