[project]
name = "preflop_advisor"
version = "0.2"
requires-python = ">=3.10,<4.0"
dependencies = ["pyside6==6.8.0.2"]

[project.optional-dependencies]
test = ["pytest>=8.3.2", "pytest-qt>=4.0.2", "pytest-cov>=5.0.0"]
build = ["pyinstaller>=6.9.0", "wheel>=0.40.0"]
build-linux = ["python-appimage==1.2.7"]
windows = ["pywin32==306", "configparser"]
linux = ["xcffib==1.5.0"]
macos = ["pyobjc==10.3.1"]
mysql = ["mysqlclient==2.2.4"]
postgresql = ["psycopg2-binary==2.9.9"]

[tool.ruff]
extend-include = ["*.pyw"]
extend-exclude = ["build", "archives"]
# Lines configuration
line-length = 120
indent-width = 4

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = [
    "E401", # Multiple imports on one line"
    "E731", # Do not assign a `lambda` expression, use a `def`
    "E713", # Test for membership should be `not in`
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["pics", "ranges"]
